--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,13 +1,54 @@
-<div class="flex justify-center items-center h-screen bg-gray-100">
-    <div class="w-full max-w-md bg-white rounded-md shadow-md p-8">
-      <h1 class="text-3xl text-gray-900 font-bold mb-4">Login</h1>
-      <form action="#">
-        <label for="username" class="block text-gray-700 text-sm font-semibold mb-2">Username:</label>
-        <input type="text" id="username" name="username" class="w-full px-4 py-2 leading-tight text-gray-700 bg-gray-200 border rounded-md focus:outline-none focus:bg-white focus:border-gray-400 mb-4" required>
-        <label for="password" class="block text-gray-700 text-sm font-semibold mb-2">Password:</label>
-        <input type="password" id="password" name="password" class="w-full px-4 py-2 leading-tight text-gray-700 bg-gray-200 border rounded-md focus:outline-none focus:bg-white focus:border-gray-400 mb-4" required>
-        <button type="submit" class="w-full px-4 py-2 bg-indigo-600 text-white font-semibold rounded-md shadow-md hover:bg-indigo-700 focus:outline-none focus:ring focus:ring-indigo-300 focus:border-indigo-700 mb-2">Login</button>
-        <a href="registration.html" class="block text-center text-sm text-gray-700 font-semibold hover:underline">Don't have an account? Register</a>
-      </form>
-    </div>
+<div class="flex justify-center items-center h-screen bg-gray-600">
+  <div class="w-full max-w-md bg-white rounded-md shadow-md p-8">
+    <div class="text-3xl font-bold text-center text-gray-700 mb-4">Login</div>
+
+    <form [formGroup]="loginForm" (ngSubmit)="submitForm()">
+      <label for="email" class="block text-gray-700 text-xl font-medium mb-2"
+        >Email</label
+      >
+      <input
+        formControlName="email"
+        type="text"
+        id="email"
+        name="email"
+        [ngClass]="{
+          'border-red-500':
+            loginForm.get('email')?.errors &&
+            (loginForm.get('email')?.dirty || loginForm.get('email')?.touched)
+        }"
+        class="w-full px-4 py-2 text-gray-700 bg-gray-200 border rounded-md focus:outline-none focus:bg-white focus:border-gray-400 mb-4"
+        required
+      />
+
+      <label for="password" class="block text-gray-700 text-xl font-medium mb-2"
+        >Password</label
+      >
+      <input
+        formControlName="password"
+        type="password"
+        id="password"
+        name="password"
+        class="w-full px-4 py-2 text-gray-700 bg-gray-200 border rounded-md focus:outline-none focus:bg-white focus:border-gray-400 mb-4"
+        [ngClass]="{
+          'border-red-500':
+            loginForm.get('password')?.errors &&
+            (loginForm.get('password')?.dirty ||
+              loginForm.get('password')?.touched)
+        }"
+        required
+      />
+      <button
+        type="submit"
+        [disabled]="loginForm.invalid"
+        class="w-full px-4 py-2 h-11 disabled:bg-zinc-700 disabled:cursor-not-allowed bg-indigo-600 text-white font-medium text-sm rounded-md shadow-md hover:bg-indigo-700 focus:outline-none focus:ring focus:ring-indigo-300 focus:border-indigo-700 mb-2"
+      >
+        Login
+      </button>
+      <a
+        routerLink="/register"
+        class="block text-center text-sm text-gray-700 font-semibold hover:underline"
+        >Don't have an account ? Register</a
+      >
+    </form>
   </div>
+</div>
