--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,6 +3,24 @@
     <div class="text-3xl font-bold text-center text-gray-700 mb-4">Login</div>
 
     <form [formGroup]="loginForm" (ngSubmit)="submitForm()">
+      <label for="role" class="block text-gray-700 text-xl font-medium mb-2"
+        >Role</label
+      >
+      <select
+        formControlName="role"
+        id="role"
+        name="role"
+        class="w-full px-4 py-2 text-gray-700 bg-gray-200 border-2 rounded-md focus:outline-none focus:bg-white focus:border-gray-400 mb-4"
+        [ngClass]="{
+          'border-red-500':
+            loginForm.get('role')?.errors &&
+            (loginForm.get('role')?.dirty || loginForm.get('role')?.touched)
+        }"
+        required
+      >
+        <option value="USER">User</option>
+        <option value="ADMIN">Admin</option>
+      </select>
       <label for="email" class="block text-gray-700 text-xl font-medium mb-2"
         >Email</label
       >
@@ -16,7 +34,7 @@
             loginForm.get('email')?.errors &&
             (loginForm.get('email')?.dirty || loginForm.get('email')?.touched)
         }"
-        class="w-full px-4 py-2 text-gray-700 bg-gray-200 border rounded-md focus:outline-none focus:bg-white focus:border-gray-400 mb-4"
+        class="w-full px-4 py-2 text-gray-700 bg-gray-200 border-2 rounded-md focus:outline-none focus:bg-white focus:border-gray-400 mb-4"
         required
       />
 
@@ -28,7 +46,7 @@
         type="password"
         id="password"
         name="password"
-        class="w-full px-4 py-2 text-gray-700 bg-gray-200 border rounded-md focus:outline-none focus:bg-white focus:border-gray-400 mb-4"
+        class="w-full px-4 py-2 text-gray-700 bg-gray-200 border-2 rounded-md focus:outline-none focus:bg-white focus:border-gray-400 mb-4"
         [ngClass]="{
           'border-red-500':
             loginForm.get('password')?.errors &&
@@ -40,7 +58,7 @@
       <button
         type="submit"
         [disabled]="loginForm.invalid"
-        class="w-full px-4 py-2 h-11 disabled:bg-zinc-700 disabled:cursor-not-allowed bg-indigo-600 text-white font-medium text-sm rounded-md shadow-md hover:bg-indigo-700 focus:outline-none focus:ring focus:ring-indigo-300 focus:border-indigo-700 mb-2"
+        class="w-full px-4 py-2 h-11 disabled:bg-zinc-400 disabled:text-black disabled:cursor-not-allowed bg-indigo-600 text-white font-medium text-sm rounded-md shadow-md hover:bg-indigo-700 focus:outline-none focus:ring focus:ring-indigo-300 focus:border-indigo-700 mb-2"
       >
         Login
       </button>
