--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -64,7 +64,7 @@
       </button>
       <a
         routerLink="/register"
-        class="block text-center text-sm text-gray-700 font-semibold hover:underline"
+        class="block text-center text-sm text-gray-700 font-medium hover:underline"
         >Don't have an account ? Register</a
       >
     </form>
