--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -3,7 +3,7 @@
     <div class="text-3xl text-center text-gray-900 font-bold mb-4">
       Register
     </div>
-    <form action="#">
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
       <label for="username" class="block text-gray-700 text-xl font-medium mb-2"
         >Fullname</label
       >
@@ -11,7 +11,14 @@
         type="text"
         id="fullname"
         name="fullname"
-        class="w-full px-4 py-2 text-gray-700 bg-gray-200 border rounded-md focus:outline-none focus:bg-white focus:border-gray-400 mb-4"
+        formControlName="fullname"
+        [ngClass]="{
+          'border-red-500':
+            registerForm.get('fullname')?.errors &&
+            (registerForm.get('fullname')?.dirty ||
+              registerForm.get('fullname')?.touched)
+        }"
+        class="w-full px-4 py-2 text-gray-700 bg-gray-200 border-2 rounded-md focus:outline-none focus:bg-white focus:border-gray-400 mb-4"
         required
       />
       <label for="username" class="block text-gray-700 text-xl font-medium mb-2"
@@ -21,7 +28,14 @@
         type="text"
         id="username"
         name="username"
-        class="w-full px-4 py-2 text-gray-700 bg-gray-200 border rounded-md focus:outline-none focus:bg-white focus:border-gray-400 mb-4"
+        formControlName="username"
+        [ngClass]="{
+          'border-red-500':
+            registerForm.get('username')?.errors &&
+            (registerForm.get('username')?.dirty ||
+              registerForm.get('username')?.touched)
+        }"
+        class="w-full px-4 py-2 text-gray-700 bg-gray-200 border-2 rounded-md focus:outline-none focus:bg-white focus:border-gray-400 mb-4"
         required
       />
       <label for="email" class="block text-gray-700 text-xl font-medium mb-2"
@@ -31,7 +45,14 @@
         type="email"
         id="email"
         name="email"
-        class="w-full px-4 py-2 text-gray-700 bg-gray-200 border rounded-md focus:outline-none focus:bg-white focus:border-gray-400 mb-4"
+        formControlName="email"
+        [ngClass]="{
+          'border-red-500':
+            registerForm.get('email')?.errors &&
+            (registerForm.get('email')?.dirty ||
+              registerForm.get('email')?.touched)
+        }"
+        class="w-full px-4 py-2 text-gray-700 bg-gray-200 border-2 rounded-md focus:outline-none focus:bg-white focus:border-gray-400 mb-4"
         required
       />
       <label for="password" class="block text-gray-700 text-xl font-medium mb-2"
@@ -41,7 +62,14 @@
         type="password"
         id="password"
         name="password"
-        class="w-full px-4 py-2 text-gray-700 bg-gray-200 border rounded-md focus:outline-none focus:bg-white focus:border-gray-400 mb-4"
+        formControlName="password"
+        [ngClass]="{
+          'border-red-500':
+            registerForm.get('password')?.errors &&
+            (registerForm.get('password')?.dirty ||
+              registerForm.get('password')?.touched)
+        }"
+        class="w-full px-4 py-2 text-gray-700 bg-gray-200 border-2 rounded-md focus:outline-none focus:bg-white focus:border-gray-400 mb-4"
         required
       />
       <label
@@ -53,12 +81,20 @@
         type="password"
         id="confirm-password"
         name="confirm-password"
-        class="w-full px-4 py-2 text-gray-700 bg-gray-200 border rounded-md focus:outline-none focus:bg-white focus:border-gray-400 mb-4"
+        [ngClass]="{
+          'border-red-500':
+            registerForm.get('confirmPassword')?.errors &&
+            (registerForm.get('confirmPassword')?.dirty ||
+              registerForm.get('confirmPassword')?.touched)
+        }"
+        class="w-full px-4 py-2 text-gray-700 bg-gray-200 border-2 rounded-md focus:outline-none focus:bg-white focus:border-gray-400 mb-4"
+        formControlName="confirmPassword"
         required
       />
       <button
         type="submit"
-        class="w-full px-4 py-2 bg-indigo-600 text-white font-medium rounded-md shadow-md hover:bg-indigo-700 focus:outline-none focus:ring focus:ring-indigo-300 focus:border-indigo-700 mb-2"
+        [disabled]="registerForm.invalid"
+        class="w-full px-4 py-2 bg-indigo-600 disabled:bg-zinc-400 disabled:text-black disabled:cursor-not-allowed text-white font-medium rounded-md shadow-md hover:bg-indigo-700 focus:outline-none focus:ring focus:ring-indigo-300 focus:border-indigo-700 mb-2"
       >
         Register
       </button>
