Sidebar and Profile component

--- a/src/app/modules/user/components/profile/profile.component.html
+++ b/src/app/modules/user/components/profile/profile.component.html
@@ -1,1 +1,19 @@
-<p>profile works!</p>
+<div class="bg-gray-100 h-screen w-64 flex flex-col fixed top-0 right-0">
+    <div class="py-4 px-6 flex items-center justify-center border-b border-gray-200">
+        <div class="text-center">
+            <img src="./pngwing.com.png" alt="Profile Picture" class="w-16 h-16 rounded-full mx-auto mb-2">
+            <p class="text-xl font-semibold">John Doe</p>
+            <p class="text-sm text-gray-600">johndoe</p>
+        </div>
+    </div>
+
+    <div class="mt-6 flex-1">
+        <a href="#" class="block py-2 px-4 text-lg text-gray-700 hover:bg-gray-200">Profile</a>
+        <a href="#" class="block py-2 px-4 text-lg text-gray-700 hover:bg-gray-200">Posts</a>
+        <a href="#" class="block py-2 px-4 text-lg text-gray-700 hover:bg-gray-200">Saved</a>
+    </div>
+
+    <div class="py-4 px-6 border-t border-gray-200">
+        <a href="#" class="block py-2 px-4 text-lg text-gray-700 hover:bg-gray-200">Logout</a>
+    </div>
+</div>
