Custom Dialog and Dashboard UI

--- a/src/app/modules/user/components/dashboard/dashboard.component.html
+++ b/src/app/modules/user/components/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
-<div class="flex">
+<div class="flex bg-gray-800 h-screen overflow-hidden">
   <div class="w-2/12"><app-sidebar /></div>
-  <div class="w-7/12">
+  <div class="w-7/12 overflow-y-auto border-x p-5 scrollbar-hide">
     <router-outlet></router-outlet>
   </div>
   <div class="w-3/12"><app-profile /></div>
