--- a/src/app/modules/user/components/profile/profile.component.html
+++ b/src/app/modules/user/components/profile/profile.component.html
@@ -1,31 +1,79 @@
 <div class="bg-gray-800 h-screen flex flex-col p-5">
   <div class="py-4 px-6 flex items-center justify-center border-b border-white">
     <div class="text-center">
-      <img
-        src="./pngwing.com.png"
-        alt="Profile Picture"
-        class="w-16 h-16 rounded-full mx-auto mb-2"
-      />
-      <p class="text-xl font-medium text-white">John Doe</p>
-      <p class="text-sm text-white">johndoe</p>
+      <ng-container *ngIf="profile !== undefined; else noProfile">
+        <img
+          src="{{ profile }}"
+          alt="Profile Picture"
+          class="w-16 h-16 rounded-full mx-auto mb-2"
+        />
+      </ng-container>
+      <ng-template #noProfile>
+        <img
+          src="./../../../../../assets/profile-svgrepo-com.svg  "
+          alt="Profile Picture"
+          class="w-16 h-16 rounded-full mx-auto mb-2"
+        />
+      </ng-template>
+
+      <p class="text-xl font-medium text-white">{{ fullname }}</p>
+      <p class="text-sm text-white">{{ username }}</p>
     </div>
   </div>
 
   <div class="mt-6 flex-1">
-    <a
-      href="#"
-      class="block py-2 px-4 text-lg text-white hover:bg-gray-700 rounded-md"
-      >Profile</a
+    <button
+      routerLink="/user/profile"
+      routerLinkActive="bg-gray-900"
+      [routerLinkActiveOptions]="{ exact: true }"
+      class="relative block py-2 w-full text-start px-4 text-lg text-white hover:bg-gray-700 rounded-md"
     >
-    <a
-      href="#"
-      class="block py-2 px-4 text-lg text-white hover:bg-gray-700 rounded-md"
-      >Posts</a
+      Profile
+      <span
+        class="absolute top-2 right-2 mt-1 mr-1 inline-flex items-center justify-center w-4 h-4 text-xs font-semibold text-blue-800 rounded-full"
+      >
+        <mat-icon>keyboard_arrow_right</mat-icon>
+      </span>
+    </button>
+
+    <button
+      routerLink="/user/blogs"
+      routerLinkActive="bg-gray-900"
+      [routerLinkActiveOptions]="{ exact: true }"
+      class="relative block py-2 w-full text-start px-4 text-lg text-white hover:bg-gray-700 rounded-md"
     >
-    <a
-      href="#"
-      class="block py-2 px-4 text-lg text-white hover:bg-gray-700 rounded-md"
-      >Saved</a
+      Posts
+      <span
+        class="absolute top-2 right-1 mt-1 mr-1 inline-flex items-center justify-center w-4 h-4 text-xs font-semibold text-blue-800 bg-blue-200 rounded-full"
+      >
+        {{ blogCount }}
+      </span>
+    </button>
+    <button
+      routerLink="/user/bookmark"
+      routerLinkActive="bg-gray-900"
+      [routerLinkActiveOptions]="{ exact: true }"
+      class="relative block py-2 w-full text-start px-4 text-lg text-white hover:bg-gray-700 rounded-md"
     >
+      Bookmark
+      <span
+        class="absolute top-2 right-1 mt-1 mr-1 inline-flex items-center justify-center w-4 h-4 text-xs font-semibold text-blue-800 bg-blue-200 rounded-full"
+      >
+        {{ "0" }}
+      </span>
+    </button>
   </div>
 </div>
+
+<!-- <button
+        type="button"
+        routerLink="/team"
+        class="inline-flex items-center mt-6 px-5 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+      >
+        Team Member
+        <span
+          class="inline-flex items-center justify-center w-4 h-4 ms-2 text-xs font-semibold text-blue-800 bg-blue-200 rounded-full"
+        >
+          {{ teamCount }}
+        </span>
+      </button> -->
