add blog UI done

--- a/src/app/modules/user/components/sidebar/sidebar.component.html
+++ b/src/app/modules/user/components/sidebar/sidebar.component.html
@@ -39,7 +39,12 @@
     </a>
   </div>
 
-  <div class="py-4 px-6 border-t border-gray-200">
-    <button (click)="openDialog()" class="text-lg text-white">Logout</button>
+  <div class="py-2 border-t border-gray-200">
+    <button
+      (click)="openDialog()"
+      class="text-lg w-full h-10 hover:bg-gray-700 text-white rounded-md"
+    >
+      Logout
+    </button>
   </div>
 </div>
