--- a/src/app/modules/user/components/add-blog/add-blog.component.html
+++ b/src/app/modules/user/components/add-blog/add-blog.component.html
@@ -60,9 +60,11 @@
       <mat-form-field class="w-full">
         <mat-label>Category</mat-label>
         <mat-select multiple class="rounded-options" formControlName="category">
-          <mat-option *ngFor="let category of categories" [value]="category">{{
-            category
-          }}</mat-option>
+          <mat-option
+            *ngFor="let category of categories"
+            [value]="category._id"
+            >{{ category.name }}</mat-option
+          >
         </mat-select>
       </mat-form-field>
     </div>
