--- a/src/app/modules/user/components/blog-card/blog-card.component.html
+++ b/src/app/modules/user/components/blog-card/blog-card.component.html
@@ -1,51 +1,54 @@
 <div
-  class="w-full bg-white shadow-lg rounded-lg overflow-hidden mx-auto my-5 border border-gray-200"
+  class="w-full bg-slate-700 text-white shadow-lg rounded-lg overflow-hidden mx-auto my-5 border border-black"
 >
   <div class="px-4 py-3">
     <div class="flex items-center justify-between">
-      <div class="flex items-start">
+      <div class="flex items-start" *ngIf="personal">
         <img
           src="./af1d3ee27865dcd4f070d0a36d7453d7.jpeg"
           alt="Image"
           class="w-12 h-12 rounded-full mr-3"
         />
         <div>
-          <span class="text-sm font-semibold text-gray-800">Author Name</span>
-          <span class="text-xs font-semibold text-gray-600 block"
-            >username</span
-          >
+          <span class="text-sm font-medium text-white">Author Name</span>
+          <span class="text-xs font-medium text-white block">username</span>
         </div>
       </div>
-      <span class="text-xs font-thin text-gray-600">April 12, 2024</span>
+      <span class="text-sm font-medium text-white">{{
+        blog.created_at | date
+      }}</span>
     </div>
     <div class="mt-3">
-      <h1 class="text-lg font-semibold text-gray-900">Title</h1>
-      <p class="text-gray-700 text-sm mt-2">Description</p>
+      <h1 class="text-lg font-medium text-white">{{ blog.title }}</h1>
+      <p class="text-white text-sm mt-2">{{ blog.content }}</p>
       <img
+        *ngIf="blog.image"
         src="./40418245763_871e9f222f_o.jpg"
         alt="Image"
         class="mt-3 rounded-lg w-full"
       />
     </div>
-    <div class="mt-2">
-      <p class="text-xs font-thin text-gray-700">Category, Category</p>
+    <div class="flex flex-wrap">
+      <ng-container *ngFor="let category of blog.category">
+        <span
+          class="text-xs m-2 py-1 px-2 font-thin bg-black rounded-md text-white"
+        >
+          {{ category.name }}
+        </span>
+      </ng-container>
     </div>
   </div>
   <div
     class="px-4 py-3 flex justify-between items-center border-t border-gray-200"
   >
     <div class="flex items-center">
-      <button
-        class="text-sm font-semibold text-gray-700 mr-4 hover:text-blue-500"
-      >
+      <button class="text-sm font-medium text-white mr-4 hover:text-blue-500">
         Like
       </button>
-      <button
-        class="text-sm font-semibold text-gray-700 mr-4 hover:text-blue-500"
-      >
+      <button class="text-sm font-medium text-white mr-4 hover:text-blue-500">
         Comment
       </button>
-      <button class="text-sm font-semibold text-gray-700 hover:text-blue-500">
+      <button class="text-sm font-medium text-white hover:text-blue-500">
         Bookmark
       </button>
     </div>
