--- a/src/app/modules/user/components/add-interest/add-interest.component.html
+++ b/src/app/modules/user/components/add-interest/add-interest.component.html
@@ -1,1 +1,53 @@
-<p>add-interest works!</p>
+<div class="flex flex-col space-x-4">
+  <div class="flex flex-col w-full">
+    <div class="font-bold">ADD INTEREST :</div>
+    <form>
+      <mat-form-field class="example-chip-list w-full">
+        <mat-label>Favorite Fruits</mat-label>
+        <mat-chip-grid #chipGrid aria-label="Fruit selection">
+          @for (fruit of fruits; track fruit) {
+          <mat-chip-row (removed)="remove(fruit)">
+            {{ fruit }}
+            <button matChipRemove [attr.aria-label]="'remove ' + fruit">
+              <mat-icon>cancel</mat-icon>
+            </button>
+          </mat-chip-row>
+          }
+        </mat-chip-grid>
+        <input
+          placeholder="New Fruit..."
+          #fruitInput
+          [formControl]="fruitCtrl"
+          [matChipInputFor]="chipGrid"
+          [matAutocomplete]="auto"
+          [matChipInputSeparatorKeyCodes]="eparatorKeysCodes"
+          (matChipInputTokenEnd)="add($event)"
+        />
+        <mat-autocomplete
+          #auto="matAutocomplete"
+          (optionSelected)="selected($event)"
+        >
+          @for (fruit of filteredFruits | async; track fruit) {
+          <mat-option [value]="fruit">{{ fruit }}</mat-option>
+          }
+        </mat-autocomplete>
+      </mat-form-field>
+    </form>
+  </div>
+  <div class="flex flex-col w-full">
+    <div class="font-bold">User's Existing Interests:</div>
+    <div class="flex flex-row flex-wrap items-center space-x-2 mt-2">
+      <div
+        *ngFor="let fruit of fruits"
+        class="bg-white w-36 h-36 items-center justify-center text-center rounded-lg"
+      >
+        <img
+          src="https://res.cloudinary.com/dxjl4x8rw/image/upload/v1712512999/profile-images/rztwetifnflwqsowf7i4.png"
+          alt="Interest Image"
+          class="w-20 h-20 rounded-full mx-auto mt-5"
+        />
+        <span class="font-medium text-black">{{ fruit }}</span>
+      </div>
+    </div>
+  </div>
+</div>
