--- a/src/app/modules/user/components/blog-card/blog-card.component.html
+++ b/src/app/modules/user/components/blog-card/blog-card.component.html
@@ -14,21 +14,25 @@
           <span class="text-xs font-medium text-white block">username</span>
         </div>
       </div>
-      <span class="text-sm font-medium text-white">{{
+      <span *ngIf="blog?.created_at" class="text-sm font-medium text-white">{{
         blog.created_at | date
       }}</span>
     </div>
     <div class="mt-3">
-      <h1 class="text-lg font-medium text-white">{{ blog.title }}</h1>
-      <p class="text-white text-sm mt-2">{{ blog.content }}</p>
+      <h1 *ngIf="blog?.title" class="text-lg font-medium text-white">
+        {{ blog.title }}
+      </h1>
+      <p *ngIf="blog?.content" class="text-white text-sm mt-2">
+        {{ blog.content }}
+      </p>
       <img
-        *ngIf="blog.image"
+        *ngIf="blog?.image"
         src="./40418245763_871e9f222f_o.jpg"
         alt="Image"
         class="mt-3 rounded-lg w-full"
       />
     </div>
-    <div class="flex flex-wrap">
+    <div *ngIf="blog?.image" class="flex flex-wrap">
       <ng-container *ngFor="let category of blog.category">
         <span
           class="text-xs m-2 py-1 px-2 font-thin bg-black rounded-md text-white"
