--- a/src/app/modules/user/components/home/home.component.html
+++ b/src/app/modules/user/components/home/home.component.html
@@ -1,5 +1,3 @@
-<app-blog-card></app-blog-card>
-<app-blog-card></app-blog-card>
-<app-blog-card></app-blog-card>
-<app-blog-card></app-blog-card>
-<app-blog-card></app-blog-card>
+<div *ngFor="let blog of blogs">
+  <app-blog-card [blog]="blog"></app-blog-card>
+</div>
