--- a/src/app/modules/user/components/blog-card/blog-card.component.html
+++ b/src/app/modules/user/components/blog-card/blog-card.component.html
@@ -32,7 +32,7 @@
         class="mt-3 rounded-lg w-full"
       />
     </div>
-    <div *ngIf="blog?.image" class="flex flex-wrap">
+    <div class="flex flex-wrap">
       <ng-container *ngFor="let category of blog.category">
         <span
           class="text-xs m-2 py-1 px-2 font-thin bg-black rounded-md text-white"
