--- a/src/app/modules/user/components/blog-card/blog-card.component.html
+++ b/src/app/modules/user/components/blog-card/blog-card.component.html
@@ -29,12 +29,9 @@
       <span *ngIf="blog?.created_at" class="text-sm font-medium text-white">{{
         blog.created_at | date
       }}</span>
-      <!-- <span>
-        <mat-icon *ngIf="blog.is_public == 1; else private">public</mat-icon>
-        <ng-template #private>
-          <mat-icon>lock</mat-icon>
-        </ng-template>
-      </span> -->
+      <span *ngIf="!personal">
+        <mat-icon>{{ blog.is_public === 1 ? "public" : "lock" }}</mat-icon>
+      </span>
     </div>
     <div class="mt-3">
       <h1 *ngIf="blog?.title" class="text-lg font-medium text-white">
