--- a/src/app/components/custom-dialog/custom-dialog.component.html
+++ b/src/app/components/custom-dialog/custom-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="bg-gray-800 rounded-lg shadow-md p-6">
+<div class="bg-slate-500 rounded-lg shadow-md p-6">
   <h2 class="text-xl font-bold text-white">{{ title }}</h2>
   <p class="text-white">{{ description }}</p>
 
