--- a/src/app/modules/user/components/edit-blog/edit-blog.component.html
+++ b/src/app/modules/user/components/edit-blog/edit-blog.component.html
@@ -1,5 +1,5 @@
 <div class="container mx-auto px-4 py-8">
-  <form [formGroup]="addBlogForm" (ngSubmit)="submitForm()">
+  <form *ngIf="addBlogForm" [formGroup]="addBlogForm" (ngSubmit)="submitForm()">
     <div class="mb-4">
       <label class="inline-flex cursor-pointer">
         <span class="me-3 text-xl font-medium text-gray-100">Public</span>
