--- a/src/app/components/custom-dialog/custom-dialog.component.html
+++ b/src/app/components/custom-dialog/custom-dialog.component.html
@@ -2,7 +2,7 @@
   <h2 class="text-xl font-bold text-white">{{ title }}</h2>
   <p class="text-white">{{ description }}</p>
 
-  <div class="mt-4 flex justify-end">
+  <div class="mt-4 flex justify-end" *ngIf="button == true">
     <button
       class="mr-2 bg-green-500 hover:bg-green-600 text-white font-medium py-2 px-4 rounded focus:outline-none focus:shadow-outline"
       (click)="onYesClick()"
