--- a/src/app/modules/user/components/add-interest/add-interest.component.html
+++ b/src/app/modules/user/components/add-interest/add-interest.component.html
@@ -1,6 +1,8 @@
 <div class="flex flex-col space-y-3">
   <div class="flex flex-col w-full">
-    <div class="font-medium">Your Interested Categories:</div>
+    <div class="block text-white text-xl font-medium mb-2">
+      Your Interested Categories:
+    </div>
     <div class="flex flex-row flex-wrap items-center">
       <div
         *ngFor="let category of categories"
@@ -24,7 +26,7 @@
     </div>
   </div>
   <div class="flex flex-col w-full">
-    <div class="font-medium">Add Category:</div>
+    <div class="block text-white text-xl font-medium mb-2">Add Category:</div>
     <div class="flex flex-row flex-wrap items-center">
       <div
         *ngFor="let category of allCategories"
