--- a/src/app/modules/user/components/blog-card/blog-card.component.html
+++ b/src/app/modules/user/components/blog-card/blog-card.component.html
@@ -42,7 +42,7 @@
       </p>
       <img
         *ngIf="blog?.image"
-        src="./40418245763_871e9f222f_o.jpg"
+        src="{{ blog.image.public_url }}"
         alt="Image"
         class="mt-3 rounded-lg w-full"
       />
